--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "morgan": "^1.9.1",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
